# tree-sitter-tes

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example-file.sc  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  test.tes  tree-sitter.json
bindings/c/: tree-sitter-TES.h  tree-sitter-TES.pc.in  tree-sitter-smartcode.h  tree-sitter-smartcode.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_smartcode/: __init__.py  binding.c
bindings/python/tree_sitter_tes/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSmartcodeTests/: TreeSitterSmartcodeTests.swift
bindings/swift/TreeSitterTesTests/: TreeSitterTesTests.swift
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
