[package]
name = "tree-sitter-smartcode"
description = "Smartcode Treesitter Parser (SC)"
version = "0.1.0"
authors = ["RootEntry"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "smartcode"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/andrerojasmartinsson/tree-sitter-smartcode"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
